add tag for every passage

--- a/source/_posts/发朋友圈被秒赞的干净文案.md
+++ b/source/_posts/发朋友圈被秒赞的干净文案.md
@@ -2,35 +2,21 @@
 title: 发朋友圈100%被秒赞的干净文案
 date: 2024-06-02 12:53:12
 tags:
+    - 日常
 ---
 
 听一万种声音，但只成为自己。
+
 任何一种生活，摩擦久了都会起球。
-如果无法挽留，不如早点放手。
-人生不是擂台，开心你就赢了。
+
 希望你过得好，像你拍的照片一样。
-我想总有一天爱我的人，会来包容我而不是忍受我。
-能让风吹散的关系，都是不用在意的。
+
 生活打不败，一个大口吃饭的人。
-你有空多爱自己，别人都很忙。
-我你所见即我，好坏我都不反驳。
+
+你所见即我，好坏我都不反驳。
+
 尊重所有声音，但只顺从自己。
-不将就自己，不敷衍生活。
-时间会教会我们如何与痛共存。
+
 我是市井小民，梦想是游历冰岛。
-找到自己的频率，然后快乐的活着。
-独自撑伞的日子，也要顺顺利利。
-有山可靠山，无山我独担。
-跳出人生的栅栏，永远生动活泼。
-所有的最好，都不如刚好。
-幸福是养自己的心，而不是别人的眼。
-生活的幸福感，不在富足而在满足。
+
 风虽大，都绕过我的灵魂。
-不期而遇，不言而喻，不药而愈。
-冗长的黑暗中，等一场晨光的照面。
-享受忙碌，适应孤独。
-青山一片云雾，心安即归处。
-生活要有松弛度，才会有不一样的色彩。
-祝这世界继续热闹，祝我永远是我。
-生活的最佳状态: 是冷冷清清的风风火火。
-当你又美又忙，何惧患得患失。
