--- a/source/_posts/吾日三省吾身.md
+++ b/source/_posts/吾日三省吾身.md
@@ -2,9 +2,13 @@
 title: 吾日三省吾身
 date: 2024-06-02 12:47:30
 tags:
+    - 随笔
 ---
 
-* 木叶飞舞之处，火亦生生不息。–猿飞日斩
-* 他们的生活就像栅栏后的花朵，没有人浇水施肥，却兀自生长。 –叶林檎影评《无人知晓》
-* 谁都可以得到的东西才叫幸福。  –《怪物》2023
-* “可恶的紫荆草，不想办法，总有一天它会挤掉一切有用的植物。”
+木叶飞舞之处，火亦生生不息。–猿飞日斩
+
+他们的生活就像栅栏后的花朵，没有人浇水施肥，却兀自生长。 –叶林檎影评《无人知晓》
+
+谁都可以得到的东西才叫幸福。  –《怪物》2023
+
+“可恶的紫荆草，不想办法，总有一天它会挤掉一切有用的植物。”
