--- a/source/_posts/感觉温暖舒服的文案.md
+++ b/source/_posts/感觉温暖舒服的文案.md
@@ -2,13 +2,21 @@
 title: 感觉温暖舒服的文案
 date: 2024-06-02 12:35:02
 tags:
+    - 治愈
 ---
 
-* 一个人若能令你心安，便能教会你温柔。
-* 人心中都有自己的清晨，时候到了就会自己醒来。
-* 人生没有白走的路，每一步都算数。
-* 一个人要隐藏多少秘密，才能巧妙的度过这一生。
-* 世界也许不会变得更好，但你可以。
-* 你应该乐观起来，这世界有朝夕与四季，还有理想与远方。
-* 以后的日子，不奢望做的每一个选择都正确，只希望每一个选择造成的结果，自己都能接受。
-* 不管怎么样，努力本身就是一件会让人觉得心安理得的事。如果成功了会心安理得地享受自己获得的一切，即使失败了也能心安理得地放下然后继续前行。
+一个人若能令你心安，便能教会你温柔。
+
+人心中都有自己的清晨，时候到了就会自己醒来。
+
+人生没有白走的路，每一步都算数。
+
+一个人要隐藏多少秘密，才能巧妙的度过这一生。
+
+世界也许不会变得更好，但你可以。
+
+你应该乐观起来，这世界有朝夕与四季，还有理想与远方。
+
+以后的日子，不奢望做的每一个选择都正确，只希望每一个选择造成的结果，自己都能接受。
+
+不管怎么样，努力本身就是一件会让人觉得心安理得的事。如果成功了会心安理得地享受自己获得的一切，即使失败了也能心安理得地放下然后继续前行。
