--- a/source/_posts/没点大病刷不到的搞笑文案.md
+++ b/source/_posts/没点大病刷不到的搞笑文案.md
@@ -2,61 +2,79 @@
 title: 没点大病刷不到的搞笑文案
 date: 2024-06-02 12:48:30
 tags:
+    - 搞笑
 ---
 
-* 知识就像内裤，看不见却很重要。
-* 最近该减减重了，要给过年发胖预留点空间。
-* 好想变成章鱼，一下能牵八个男人。
-* 很内向，醒来不敢出被窝。
-* 爱笑的女生运气都不会差，因为运气差的都笑不出来。
-* 最近真的很累，有种古代太监逛青楼的无力感。
-* 准备过年回家了，别人提钱回家，我提前回家。
-* 恋爱要和印度人谈，他们画的饼会飞。
-* 以前不爱吃苦瓜，现在爱吃了，比我的命甜一点。
-* 人生应该五颜六色而你却卡在了黄色和绿色。
-* 这辈子没红过，被绿过也算知足了。
-* 如果有人说要养你，小心他用的是剩饭。
-* 胖的原因大概就是瘦小的身躯，容不下我伟大的人格。
-* 不要总是对别人笑，也许你不经意的一个笑容，就会成为别人的表情包。
-* 侮辱我的方式有很多，不用从没对象开始说。
-* 以前我没有择偶标准，直到遇见你，我告诉自己: 像你这种的不可能。
-* 不要叫我宅女，叫我闭家锁。
-* 所有人都在关心你，飞的高不高，累不累， 只有我不一样，我不关心你。
-* 我的钱包好可怜，一辈子都没有见过钱。
-* 大师我不要桃花了，我要钱花。
-* 情况呢，就是这个情况，具体什么情况，还得看情况。
-* 我的减肥方法: 许愿。
-* 除了干饭皆无向往，被窝以外皆是他乡。
-* 别的女孩子是想撒娇，我只想跟你单挑。
-* 什么破生活，连一个让我起色心的人都没有，杀心倒是越来越重。
-* 非要长得像沼泽一样，你才会为我沦陷吗？
-* 很外向，上班总想坐老板位置。
-* 大姨妈推迟三天，感觉孩子都在踢我了。
-* 你敢惹我，你算是踢到棉花了。
-* 谁把我的钱挣了，我怎么挣不到钱。
-* 我拿什么跟她比，她吃肯德基从来不看星期几。
-* 别人二十岁帕拉梅拉，我二十岁饿了喊妈。
-* 虽然我不会做饭，但我能点得一手好外卖。
-* 本人已回归家庭，目前在家做全职女儿。
-* 你说爱我的时候，像极了中介骗我进厂。
-* 我要山，要海要自由，开玩笑的，我要饭的。
-* 大家吃饭没有，没有就自己去煮。
-* 又饿了，果然漂亮不能当饭吃。
-* 虽然今天什么也没干，但还是辛苦我了。
-* 一定要长得好看吗，长得好笑不行吗。
-* 别睡了，没我的觉你睡不明白。
-* 优越感哪来的，有链接吗，最近很自卑。
-* 命只有一条，但要命的事不止一件。
-* 睡不着，希望睡着的人全部尿床。
-* 爱我就忘了地球上其她30亿女孩。
-* 帮朋友问的20多岁可以住进养老院吗？
-* 有没有人帮我早起，我可以帮你熬夜。
-* 拋个硬币，如果摔碎了，今天就不吃夜宵了。
-* 不敢睡觉，怕一觉起来又要打工。
-* 手好冷啊，好想把手伸进你们的钱包里。
-* 再熬夜是狗，什么品种还没想好。
-* 你不能因为我笨就往死里骗我。
-* 这辈子：抠抠搜搜地花了很多钱。
-* 很内向，看到帅哥不敢直接亲。
-* 会呼吸的女孩子真的很加分。
-* 厌倦了这种非亿万富翁的生活。
+知识就像内裤，看不见却很重要。
+
+最近该减减重了，要给过年发胖预留点空间。
+
+好想变成章鱼，一下能牵八个男人。
+
+很内向，醒来不敢出被窝。
+
+最近真的很累，有种古代太监逛青楼的无力感。
+
+准备过年回家了，别人提钱回家，我提前回家。
+
+以前不爱吃苦瓜，现在爱吃了，比我的命甜一点。
+
+胖的原因大概就是瘦小的身躯，容不下我伟大的人格。
+
+不要总是对别人笑，也许你不经意的一个笑容，就会成为别人的表情包。
+
+侮辱我的方式有很多，不用从没对象开始说。
+
+以前我没有择偶标准，直到遇见你，我告诉自己: 像你这种的不可能。
+
+不要叫我宅女，叫我闭家锁。
+
+除了干饭皆无向往，被窝以外皆是他乡。
+
+别的女孩子是想撒娇，我只想跟你单挑。
+
+什么破生活，连一个让我起色心的人都没有，杀心倒是越来越重。
+
+很外向，上班总想坐老板位置。
+
+大姨妈推迟三天，感觉孩子都在踢我了。
+
+你敢惹我，你算是踢到棉花了。
+
+我拿什么跟她比，她吃肯德基从来不看星期几。
+
+别人二十岁帕拉梅拉，我二十岁饿了喊妈。
+
+虽然我不会做饭，但我能点得一手好外卖。
+
+本人已回归家庭，目前在家做全职女儿。
+
+你说爱我的时候，像极了中介骗我进厂。
+
+又饿了，果然漂亮不能当饭吃。
+
+虽然今天什么也没干，但还是辛苦我了。
+
+别睡了，没我的觉你睡不明白。
+
+优越感哪来的，有链接吗，最近很自卑。
+
+命只有一条，但要命的事不止一件。
+
+睡不着，希望睡着的人全部尿床。
+
+爱我就忘了地球上其她30亿女孩。
+
+有没有人帮我早起，我可以帮你熬夜。
+
+手好冷啊，好想把手伸进你们的钱包里。
+
+再熬夜是狗，什么品种还没想好。
+
+你不能因为我笨就往死里骗我。
+
+这辈子：抠抠搜搜地花了很多钱。
+
+很内向，看到帅哥不敢直接亲。
+
+厌倦了这种非亿万富翁的生活。
