--- a/source/_posts/温柔到发光的治愈文案.md
+++ b/source/_posts/温柔到发光的治愈文案.md
@@ -2,31 +2,57 @@
 title: 温柔到发光的治愈文案
 date: 2024-06-02 12:43:32
 tags:
+    - 治愈
 ---
 
-* 镜子很脏的时候，我们并不会误以为是自己的脸脏。那为什么別人随口说出糟糕的话时，我们要觉得糟糕的是我们自己。
-* 我们各自发光，不必吹灭别人的灯。
-* 把你的脸迎向阳光，那就不会有阴影。
-* 你跑得慢，周围都是笑声，你跑得快，周围都是风。
-* 不要在意一个对你生命无关的人对你的评价，他们不需要对你的人生负责，而你需要对自己的人生负责。
-* 万物皆有裂痕，那是光进来的地方。
-* 抬起头在更热烈的风里相遇吧。
-* 若美好迟迟未发生也不要找进去，最好的总在不经意间出现，你的幸福只是姗姗来迟，而你现在只需要努力，剩下的交给时光。
-* 从来不是让你把一次考试当成人生成败的赌注，只是想让你在年轻的时候体会一次全力以赴。
-* 如果你觉得太累了，就关灯好好睡一觉，不要太责怪自己，我知道你也是很努力才走到现在，你已经很棒了。
-* 其实我都知道爱会消失，承诺会失效，人们会走散，只不过我们都愿意相信，自己是个例外。
-* 有人捏着你的罪过依依不饶，但总有人不在乎你的一切，跨过山河来保护你，就像漫漫长夜总有天明。
-* 我们坠落，破碎，掉落深渊，但我们终将被托起，被治愈，我们无所畏惧。
-* 做自己的光不需要太亮，足以挨过寒冬和黑夜就好。
-* 不要像个落难者，告诉别人你的不幸。
-* 或许你并不熠熠生辉吧，甚至有点木讷，但是本身就是星星，就是浪漫。
-* 我独自走过了苍苍茫茫，与你同行才有了光。
-* 天会亮的，没有太阳也会亮的。
-* 当我在追光，我与光同航。
-* 迟来的阳光不会拯救凋零的花，但花一定会再次绽放。
-* 我依旧敢和生活顶撞，敢在逆境里撒野，直面生活的污水，永远乐意为新的一轮月亮和日落欢呼。
-* 世界没给你的温柔还在路上，别急，慢慢来。
-* 生活不是选择而是热爱，我和我的日子都会发光。
-* 零星一样的变好，最后也一定会和星河一样闪耀。
-* 在无名的街道里，总会有无名的人为你野蛮生长。
-* 我透过枝桠，看见了太阳。
+镜子很脏的时候，我们并不会误以为是自己的脸脏。那为什么別人随口说出糟糕的话时，我们要觉得糟糕的是我们自己。
+
+我们各自发光，不必吹灭别人的灯。
+
+把你的脸迎向阳光，那就不会有阴影。
+
+你跑得慢，周围都是笑声，你跑得快，周围都是风。
+
+不要在意一个对你生命无关的人对你的评价，他们不需要对你的人生负责，而你需要对自己的人生负责。
+
+万物皆有裂痕，那是光进来的地方。
+
+抬起头在更热烈的风里相遇吧。
+
+若美好迟迟未发生也不要找进去，最好的总在不经意间出现，你的幸福只是姗姗来迟，而你现在只需要努力，剩下的交给时光。
+
+从来不是让你把一次考试当成人生成败的赌注，只是想让你在年轻的时候体会一次全力以赴。
+
+如果你觉得太累了，就关灯好好睡一觉，不要太责怪自己，我知道你也是很努力才走到现在，你已经很棒了。
+
+其实我都知道爱会消失，承诺会失效，人们会走散，只不过我们都愿意相信，自己是个例外。
+
+有人捏着你的罪过依依不饶，但总有人不在乎你的一切，跨过山河来保护你，就像漫漫长夜总有天明。
+
+我们坠落，破碎，掉落深渊，但我们终将被托起，被治愈，我们无所畏惧。
+
+做自己的光不需要太亮，足以挨过寒冬和黑夜就好。
+
+不要像个落难者，告诉别人你的不幸。
+
+或许你并不熠熠生辉吧，甚至有点木讷，但是本身就是星星，就是浪漫。
+
+我独自走过了苍苍茫茫，与你同行才有了光。
+
+天会亮的，没有太阳也会亮的。
+
+当我在追光，我与光同航。
+
+迟来的阳光不会拯救凋零的花，但花一定会再次绽放。
+
+我依旧敢和生活顶撞，敢在逆境里撒野，直面生活的污水，永远乐意为新的一轮月亮和日落欢呼。
+
+世界没给你的温柔还在路上，别急，慢慢来。
+
+生活不是选择而是热爱，我和我的日子都会发光。
+
+零星一样的变好，最后也一定会和星河一样闪耀。
+
+在无名的街道里，总会有无名的人为你野蛮生长。
+
+我透过枝桠，看见了太阳。
