--- a/source/_posts/温柔到骨子里的文案.md
+++ b/source/_posts/温柔到骨子里的文案.md
@@ -1,28 +1,50 @@
 ---
 title: 温柔到骨子里的文案
 date: 2024-06-02 12:28:52
-tags:
+tags: 
+    - 治愈
 ---
 
-* 自卑溢出来就变成了安静和温柔。
-* 夏夜，大概就是女孩子飞扬的裙角，和临风而来的沐浴露的香味，一切都那么轻柔，像一个吻。
-* 用云朵记录的情愫，用风级定义的心情。
-* 拉着你的手，无论是在哪里，我都感觉像是朝天堂奔跑。
-* 人间一趟，积极向上，不念忇，不畏将来。
-* 未知全貌，不予评价，出言有尺，做事有余。
-* 最好的关系，有幸遇见，恰好合拍。
-* 不必行色匆匆，不必光芒四射，不必成为别人，只需做自己。
-* 要做一个温暖的人，去温暖别人和自己。
-* 被误会没有关系，我有做坏人的勇气。
-* 满天都是星星，好像一场冻结了的大雨。
-* 火车的窗帘破了一个洞，我背着全车厢的人和夏天交换秘密。
-* 君不见淮南少年游侠客，白日球猎夜拥掷。
-* 无所知的世界，走下去才有惊喜。
-* 大概不合适就是你喜欢清野酒，我却独爱烈风。
-* 树木在森林中相依偎而生长，星辰在银河中因辉映而璀璨。
-* 世界上美好的事情有很多，但美好的人，只有你一个。
-* 白天穿过漫山遍野的花，黑夜偷偷躲进你软绵绵的梦，再贪心一点，明天能和你见上一面就好了。
-* 春天的风，甜滋滋的樱桃，桑椹咕噜咕噜的泉水，傍晚的夕阳，这些都像是你的存在。
-* 如果没有惊艳谁的话，那就试试温柔岁⽉吧。
-* 如果你孑然一身，你可以天马行空，四处闯荡。
-* 做人就是要像饼干一样，干干脆脆，可甜可咸。
+自卑溢出来就变成了安静和温柔。
+
+夏夜，大概就是女孩子飞扬的裙角，和临风而来的沐浴露的香味，一切都那么轻柔，像一个吻。
+
+用云朵记录的情愫，用风级定义的心情。
+
+拉着你的手，无论是在哪里，我都感觉像是朝天堂奔跑。
+
+人间一趟，积极向上，不念忇，不畏将来。
+
+未知全貌，不予评价，出言有尺，做事有余。
+
+最好的关系，有幸遇见，恰好合拍。
+
+不必行色匆匆，不必光芒四射，不必成为别人，只需做自己。
+
+要做一个温暖的人，去温暖别人和自己。
+
+被误会没有关系，我有做坏人的勇气。
+
+满天都是星星，好像一场冻结了的大雨。
+
+火车的窗帘破了一个洞，我背着全车厢的人和夏天交换秘密。
+
+君不见淮南少年游侠客，白日球猎夜拥掷。
+
+无所知的世界，走下去才有惊喜。
+
+大概不合适就是你喜欢清野酒，我却独爱烈风。
+
+树木在森林中相依偎而生长，星辰在银河中因辉映而璀璨。
+
+世界上美好的事情有很多，但美好的人，只有你一个。
+
+白天穿过漫山遍野的花，黑夜偷偷躲进你软绵绵的梦，再贪心一点，明天能和你见上一面就好了。
+
+春天的风，甜滋滋的樱桃，桑椹咕噜咕噜的泉水，傍晚的夕阳，这些都像是你的存在。
+
+如果没有惊艳谁的话，那就试试温柔岁⽉吧。
+
+如果你孑然一身，你可以天马行空，四处闯荡。
+
+做人就是要像饼干一样，干干脆脆，可甜可咸。
