--- a/source/_posts/突然被治愈的文案.md
+++ b/source/_posts/突然被治愈的文案.md
@@ -2,30 +2,55 @@
 title: 突然被治愈的文案
 date: 2024-06-02 12:25:15
 tags:
+    - 治愈
 ---
 
-* 梦想是不会发光的，发光的是追梦的你。 
-* 不为模糊不清的未来担忧，只为清清楚楚的现在努力。 
-* 错过了落日余晖，还可以静待满天繁星。 
-* 试一下，你会比你自己想象中的还要强大。 
-* 一个人至少拥有一个梦想，有一个理由去坚强。 
-* 当你有了足够的勇气，可能就会有足够的运气。 
-* 遇见的人多了，你才会明白哪些人值得用生命去珍惜，哪些人只适合绕道而行。 
-* 愿你所失去的，都会以另一种方式归来。 
-* 如果痛恨所处的黑暗，请你成为你想要的光。 
-* 生活从来都是泥沙俱下，鲜花与荆棘并存。 
-* 努力的时间还不够，哪有时间去绝望啊。 
-* 温柔要有，但不是妥协，我们要在安静中，不慌不忙的坚强。 
-* 窗外是风景，笔下有前途，低头是题海，抬头是未来。 
-* 终有一日同风起，扶摇直上九万里。 
-* 千万不要放弃，最好的东西总是压轴出场。 
-* 仍有开在泥泞里的花，有明晃晃的夏天。 
-* 彗星般的人生可以短暂，但绝不黯淡或沉沦。 
-* 如果结果不如你所愿，那就在尘埃落定前奋力一搏。 
-* 得之坦然，失之淡然，争取必然，顺其自然。 
-* 须知少时凌云志，曾许人间第一流。 
-* 每一个普通的改变，都将改变普通。 
-* 渐渐温柔，克制、朴素、不问、不怨、不记。 
-* 每一个裂缝，都是为透出光而努力。 
-* 和理想平等交易，和喧器保持距离。 
-* 有些事情不是看到希望而去坚持，而是坚持了才能看到希望。 
+梦想是不会发光的，发光的是追梦的你。 
+
+不为模糊不清的未来担忧，只为清清楚楚的现在努力。 
+
+错过了落日余晖，还可以静待满天繁星。 
+
+试一下，你会比你自己想象中的还要强大。 
+
+一个人至少拥有一个梦想，有一个理由去坚强。 
+
+当你有了足够的勇气，可能就会有足够的运气。 
+
+遇见的人多了，你才会明白哪些人值得用生命去珍惜，哪些人只适合绕道而行。 
+
+愿你所失去的，都会以另一种方式归来。 
+
+如果痛恨所处的黑暗，请你成为你想要的光。 
+
+生活从来都是泥沙俱下，鲜花与荆棘并存。
+
+努力的时间还不够，哪有时间去绝望啊。 
+
+温柔要有，但不是妥协，我们要在安静中，不慌不忙的坚强。 
+
+窗外是风景，笔下有前途，低头是题海，抬头是未来。 
+
+终有一日同风起，扶摇直上九万里。 
+
+千万不要放弃，最好的东西总是压轴出场。 
+
+仍有开在泥泞里的花，有明晃晃的夏天。 
+
+彗星般的人生可以短暂，但绝不黯淡或沉沦。 
+
+如果结果不如你所愿，那就在尘埃落定前奋力一搏。 
+
+得之坦然，失之淡然，争取必然，顺其自然。 
+
+须知少时凌云志，曾许人间第一流。 
+
+每一个普通的改变，都将改变普通。 
+
+渐渐温柔，克制、朴素、不问、不怨、不记。 
+
+每一个裂缝，都是为透出光而努力。 
+
+和理想平等交易，和喧器保持距离。 
+
+有些事情不是看到希望而去坚持，而是坚持了才能看到希望。 
