--- a/source/_posts/简单却不失高级的个性文案.md
+++ b/source/_posts/简单却不失高级的个性文案.md
@@ -2,15 +2,25 @@
 title: 简单却不失高级的个性文案
 date: 2024-06-02 12:39:54
 tags:
+    - 日常
 ---
 
-* 自己过得开心时会顺便爱一下其他人。
-* 在最容易快乐的年纪不快乐有点可惜。
-* 无能为力的时候，人们爱说顺其自然。
-* 我说了违心的话，偏偏你顺了我的意。
-* 每个人都有保质期，每个人都会过期。
-* 哪有什么救赎，只是好了伤疤忘了疼。
-* 当新故事开始时，我也学会慢慢接受。
-* 羡慕别人的天空，不如点燃自己的宇宙。
-* 慢也好，步子小也好，是在往前走就好。
-* 人山人海人来人往，自尊自爱自由自在。
+自己过得开心时会顺便爱一下其他人。
+
+在最容易快乐的年纪不快乐有点可惜。
+
+无能为力的时候，人们爱说顺其自然。
+
+我说了违心的话，偏偏你顺了我的意。
+
+每个人都有保质期，每个人都会过期。
+
+哪有什么救赎，只是好了伤疤忘了疼。
+
+当新故事开始时，我也学会慢慢接受。
+
+羡慕别人的天空，不如点燃自己的宇宙。
+
+慢也好，步子小也好，是在往前走就好。
+
+人山人海人来人往，自尊自爱自由自在。
