--- a/source/_posts/能成为你毕生信仰的救赎文案.md
+++ b/source/_posts/能成为你毕生信仰的救赎文案.md
@@ -2,25 +2,45 @@
 title: 能成为你毕生信仰的救赎文案
 date: 2024-06-02 12:45:36
 tags:
+    - 治愈
 ---
 
-* 能控制早晨的人，方可控制一生。
-* 知道命运如何却不屈服，仍然要活出自我。
-* 君子知命不惧，日日自新。
-* 渔夫出海前，并不知道鱼在哪儿，但还是会选择出海，因为相信会满载而归，很多时候选择了才会有机会，相信了才有可能。
-* 除了生老病死，人生里真正重要的事，其实没有几件。没必要为了小事愁容满面，也没必要去跟小人争个长短，记得对自己好点儿。
-* 对你最爱的人或事，就要更克制。
-* 除了没用的肉体自杀和精神逃避，第三种自杀的态度是坚持奋斗，对抗人生的荒谬。
-* 人是不能太闲的，闲久了，努力一下就以为是拼命。
-* 我的所有坚持，都是因为热爱，没办法三分钟热度，做不到对自己敷衍。
-* 常常熬不住的时候，也想找个靠山靠一下。可怎么找都会发现，有的山长满荆棘，有的山全是野兽，所以你应该是自己的那座山。
-* 烦躁的时候最看一个人的修养，独处的时候最看一个人品性。最厉害的人：在安逸中敢于改变，在独处时心甘情愿地自律，在落魄与辉煌时，皆待人如常。
-* 看似不起波澜的日复一日，会突然在某一天让你看到坚持的意义。
-* 见过更大的世界的人，往往更谦逊；见过的东西越多，反而越朴素，没有身份感；真有教养的人，在上不傲人，在下不卑人，不会显摆优越感。
-* 当我们真正热爱这世界时，我们才真正生活在这世界上。
-* 生如蝼蚁当立鸿鹄之志，命似薄纸应有不屈之心。
-* 厄运来的时候你没有躲，所以在好运来的时候，才能和你撞个满怀。
-* 希望成年后的每个决定都由你亲自完成，这件衣服要不要买，这顿饭跟谁一起吃，什么时候开始婚姻，要不要生小孩。外界的任何声音都是参考，你不开心就不要参考。
-* 不要垂头丧气，即使失去一切，明天仍在你的手里。
-* 其实你的对手根本就没那么多，因为90%的人都是很懒的，所以你只要稍微努力一点点，就能超过很大部分人。
-* 生活坏到一定程度就会好起来，因为它无法更坏。努力过后，才知道许多事情，坚持坚持，就过来了。
+能控制早晨的人，方可控制一生。
+
+知道命运如何却不屈服，仍然要活出自我。
+
+君子知命不惧，日日自新。
+
+渔夫出海前，并不知道鱼在哪儿，但还是会选择出海，因为相信会满载而归，很多时候选择了才会有机会，相信了才有可能。
+
+除了生老病死，人生里真正重要的事，其实没有几件。没必要为了小事愁容满面，也没必要去跟小人争个长短，记得对自己好点儿。
+
+对你最爱的人或事，就要更克制。
+
+除了没用的肉体自杀和精神逃避，第三种自杀的态度是坚持奋斗，对抗人生的荒谬。
+
+人是不能太闲的，闲久了，努力一下就以为是拼命。
+
+我的所有坚持，都是因为热爱，没办法三分钟热度，做不到对自己敷衍。
+
+常常熬不住的时候，也想找个靠山靠一下。可怎么找都会发现，有的山长满荆棘，有的山全是野兽，所以你应该是自己的那座山。
+
+烦躁的时候最看一个人的修养，独处的时候最看一个人品性。最厉害的人：在安逸中敢于改变，在独处时心甘情愿地自律，在落魄与辉煌时，皆待人如常。
+
+看似不起波澜的日复一日，会突然在某一天让你看到坚持的意义。
+
+见过更大的世界的人，往往更谦逊；见过的东西越多，反而越朴素，没有身份感；真有教养的人，在上不傲人，在下不卑人，不会显摆优越感。
+
+当我们真正热爱这世界时，我们才真正生活在这世界上。
+
+生如蝼蚁当立鸿鹄之志，命似薄纸应有不屈之心。
+
+厄运来的时候你没有躲，所以在好运来的时候，才能和你撞个满怀。
+
+希望成年后的每个决定都由你亲自完成，这件衣服要不要买，这顿饭跟谁一起吃，什么时候开始婚姻，要不要生小孩。外界的任何声音都是参考，你不开心就不要参考。
+
+不要垂头丧气，即使失去一切，明天仍在你的手里。
+
+其实你的对手根本就没那么多，因为90%的人都是很懒的，所以你只要稍微努力一点点，就能超过很大部分人。
+
+生活坏到一定程度就会好起来，因为它无法更坏。努力过后，才知道许多事情，坚持坚持，就过来了。
